@@ -84,3 +84,14 @@ allprojects {
     }
   }
 }
+
+configure(project(":lucene:core")) {
+  plugins.withType(JavaPlugin) {
+    tasks.named('compileJava').configure {
+      sourceCompatibility = 17
+      targetCompatibility = 17
+      options.compilerArgs += ["--release", 17 as String,  "--add-modules", "jdk.incubator.foreign"]
+      options.compilerArgs -= "-Werror"
+    }
+  }
+}
